--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
+    "classnames": "^2.5.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.8",
     "next": "14.2.8",
