--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "14.2.8",
     "next": "14.2.8",
     "postcss": "8.4.45",
+    "prisma": "^5.19.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
