Create the issue model

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://root:Gustave@123!@localhost:5432/issue-tracker"
+DATABASE_URL="postgresql://postgres:Gustave%40123%21@localhost:5432/issue-tracker/schema=public"
