--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
+    "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "easymde": "^2.18.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.8",
     "next": "14.2.8",
     "postcss": "8.4.45",
+    "postcss-import": "^16.1.0",
     "prisma": "^5.19.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "3.4.10",
